# ColorScan

./: .gitignore  ALGO.md  CLAUDE.md  Cargo.toml  FIRST-PRINCIPLES.md  README.md
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
assets/: README.md  strip_geolocation.zsh
benches/: color_analysis.rs
examples/: append_experiment.py  cli.rs  cli_batch.rs  compare_methods.rs  generate_config.rs  lab_to_color_name.rs  test_shading_detection.py  test_spatial_coherence.py
src/: config.rs  constants.rs  error.rs  image_loader.rs  lib.rs
src/calibration/: illuminant.rs  mod.rs  white_balance.rs
src/color/: analysis.rs  conversion.rs  mod.rs
src/detection/: mod.rs  paper.rs  swatch.rs
src/exif/: extractor.rs  mod.rs
tests/: README.md  integration_test.rs
